engine_secops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secops-engine
  labels:
    name: secops-engine
    app: secops-scanner
