engine_secops/k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: secops-scanner
  namespace: secops-engine
  labels:
    app: secops-scanner
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: secops-scanner
  sessionAffinity: None
