engine_secops/k8s/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: secops-scanner-external
  namespace: secops-engine
  labels:
    app: secops-scanner
    service-type: external
spec:
  type: LoadBalancer  # For AWS ALB/NLB, use LoadBalancer or Ingress
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: secops-scanner
  sessionAffinity: None
  # Uncomment and configure for AWS Load Balancer Controller
  # annotations:
  #   service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
